discussion/kv_engine/186644/186644_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55269: Add maxHistoryDiskUsage stat

Measures the maximum history disk usage across all vbuckets in a bucket

Change-Id: I29a63c5353c2c2a40b4e280d2dcb33fe8d23075c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Peter Searby
Date: 2023-02-13 14:55:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-13 14:55:20.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337623/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-13 17:56:35.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1113/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vb_count_visitor.cc:93:36: error: member access into incomplete type "KVShard" [clang-diagnostic-error]
        auto vbInfo = vb.getShard()->getRWUnderlying()->getDbFileInfo(vbid);
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vbucket.h:151:7: note: forward declaration of "KVShard"
class KVShard;
      ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1113/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/vb_count_visitor.cc:93:36:
error: member access into incomplete type "KVShard" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1113/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1340/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc(466): error C2664: "void magma::Magma::SetHistoryRetentionTime(std::chrono::seconds)": cannot convert argument 1 from "uint64_t" to "std::chrono::seconds" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1340/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1080/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/vb_count_visitor.cc:93:36:
error: member access into incomplete type "KVShard"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1080/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1130/ : FAILURE

Compile error at [2023-02-13T15:08:55.037Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "="
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1130/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1457/ : FAILURE

Compile error at [2023-02-13T14:57:59.487Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "="
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1457/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1140/ : FAILURE

Compile error at [2023-02-13T15:01:24.082Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:59:
error: no match for ?operator=? (operand types are ?magma::Magma::GetHistoryTimestampFn? {aka ?std::function<std::chrono::duration<long int>(const magma::Slice&)>?} and ?uint64_t(const magma::Slice&)? {aka ?long unsigned int(const magma::Slice&)?})
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1140/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1139/ : FAILURE

Compile error at [2023-02-13T15:08:39.641Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:36:
error: no viable conversion from "uint64_t" (aka "unsigned long") to "std::chrono::seconds" (aka "duration<long>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1139/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1131/ : FAILURE

Compile error at [2023-02-13T15:12:14.273Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:36:
error: cannot convert ?uint64_t? {aka ?long unsigned int?} to ?std::chrono::seconds? {aka ?std::chrono::duration<long int>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1131/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1139/ : FAILURE

Failure of GoogleTest "BucketLoggerEngineTest.EngineTest":

<pre>
[ RUN      ] BucketLoggerEngineTest.EngineTest
[2023-02-13T15:13:01.752Z] unknown file: Failure
[2023-02-13T15:13:01.752Z] C++ exception with description "CouchKVStore::getDbInfo: failed to open database file for vb:0 rev = 1 with error:no such file: Input/output error" thrown in TearDown().
[2023-02-13T15:13:01.752Z] [  FAILED  ] BucketLoggerEngineTest.EngineTest (17 ms)
BucketLoggerEngineTest.EngineTest
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1139/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1139/ )

Test exceeded the timeout:
[2023-02-13T15:13:58.801Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1139/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1106/ : FAILURE

Compile error at [2023-02-13T15:07:34.579Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "="
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1106/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22646/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
